syntax = "proto3";

package model;

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message Currency {
    option (gorm.opts) = {
        ormable: true,
        table: "currency"
    };
    uint32 id = 1;
    string name = 2;
    string code = 3;
}

message RateOfExchange {
    option (gorm.opts) = {
        ormable: true,
        table: "rates_of_exchange"
    };
    uint32 id = 1;
    uint32 from_id = 2;
    uint32 to_id = 3;
    float price = 4; // TODO: check if float to decimal conversion is correct
}

message Location {
    option (gorm.opts) = {
        ormable: true,
        table: "locations"
    };
    uint32 id = 1;
    string name = 2;
    string description = 3;
    uint32 currency_id = 4;
    bool status = 5;
}

message Product {
    option (gorm.opts) = {
        ormable: true,
        table: "products"
    };
    uint32 id = 1;
    string name = 2;
    string description = 3;
}

message Price {
    option (gorm.opts) = {
        ormable: true,
        table: "prices"
    };
    uint32 id = 1;
    uint32 product_id = 2;
    uint32 location_id = 3;
    float price = 4;
}

message Position {
    option (gorm.opts) = {
        ormable: true,
        table: "positions"
    };
    uint32 id = 1;
    string name = 2;
    string description = 3;
}

message Employee {
    option (gorm.opts) = {
        ormable: true,
        table: "employees"
    };
    uint32 id = 1;
    string first_name = 2;
    string last_name = 3;
    uint32 position_id = 4;
    uint32 location_id = 5;
}

message Method {
    option (gorm.opts) = {
        ormable: true,
        table: "methods"
    };
    uint32 id = 1;
    string name = 2;
}

// TODO: change datetime type
message Receipt {
    option (gorm.opts) = {
        ormable: true,
        table: "receipts"
    };
    uint32 id = 1;
    uint32 employee_id = 2;
    uint32 location_id = 3;
    uint32 method_id = 4;
    string datetime = 5;
}

message Purchase {
    option (gorm.opts) = {
        ormable: true,
        table: "purchases"
    };
    uint32 id = 1;
    uint32 receipt_id = 2;
    uint32 price_id = 3;
    float amount = 4;
    float price = 5;
    float result = 6;
}